Jiwon's ps2 up to splitting columns

--- a/ps2_JiwonByun.Rmd
+++ b/ps2_JiwonByun.Rmd
@@ -127,17 +127,17 @@ performance_hyp_d = filtered_d |>
 
 Now we want to convert the data to long form, to make the rest of our manipulations easier. To do this, we can use `pivot_longer` on the target columns. This will take many columns, and change the column names into entries in a "key" column, while the values that were in the original column will be turned into entries in a "value" column. It's easiest to see with an example:
 
-```{r}
+```{r, echo = TRUE}
 tiny_demo_d = head(performance_hyp_d, 2) # get just the first two subjects performance data, for a demo
 ```
 
 First, take a look at the original wide-form data:
-```{r}
+```{r, echo = TRUE}
 tiny_demo_d
 ```
 
 Now, take a look at the long-form version:
-```{r}
+```{r, echo = TRUE}
 tiny_demo_d |> pivot_longer(cols=-c("Subject", "Cond"), # this tells it to transform all columns *except* these ones
                              names_to='Measurement', 
                              values_to='Value')
@@ -147,8 +147,8 @@ See how the columns have been converted into rows (except for the two we exclude
 
 Now let's actually convert the performance dataset
 
-```{r}
-performance_hyp_long_d = performance_hyp_d %>%
+```{r, echo = TRUE}
+performance_hyp_long_d = performance_hyp_d |>
   pivot_longer(cols=-c("Subject", "Cond"),
                names_to='Measurement', 
                values_to='Score')
@@ -158,18 +158,20 @@ head(performance_hyp_long_d)
 
 And you can convert the rating dataset! (Call the "Key" column "Measurement" and call the "Value" column "Rating", so that the code below will work)
 
-```{r}
-rating_hyp_long_d = rating_hyp_d %>%
-  ## your code here
+```{r, echo = TRUE}
+rating_hyp_long_d = rating_hyp_d |>
+  pivot_longer(cols = -c("Subject", "Cond"),
+               names_to = "Measurement",
+               values_to = "Rating")
 
 head(rating_hyp_long_d)
 ```
 
 # Splitting columns
 
-The measurement column in each dataset now contains a bunch of different types of information. Really, we would like these to be separate columns. For example, we could have one column telling you which video-game it is, and one telling you whether there was music. Tidyverse contains some handy features for splitting columns, but unfortunately the measurement names here are not well suited to it (if the different types of information were always the same length, or were separated by a symbol like "." or "_", it would be easy). Thus we'll have to do a bit of manual testing. We can use the `mutate` function in dplyr to create new columns as functions of old ones (or alter existing columns). We'll also use the `grepl` function, which lets us test whether a *regular expression* (a fancy type of search pattern) is contained in a column name. For most your purposes, you can probably just use grepl to search for strings, but there are some other quite useful functions in regular expressions, like the "or"" function (`|`) we use below.
+The measurement column in each dataset now contains a bunch of different types of information. Really, we would like these to be separate columns. For example, we could have one column telling you which video-game it is, and one telling you whether there was music. Tidyverse contains some handy features for splitting columns, but unfortunately the measurement names here are not well suited to it (if the different types of information were alway s the same length, or were separated by a symbol like "." or "_", it would be easy). Thus we'll have to do a bit of manual testing. We can use the `mutate` function in dplyr to create new columns as functions of old ones (or alter existing columns). We'll also use the `grepl` function, which lets us test whether a *regular expression* (a fancy type of search pattern) is contained in a column name. For most your purposes, you can probably just use grepl to search for strings, but there are some other quite useful functions in regular expressions, like the "or"" function (`|`) we use below.
 
-```{r}
+```{r, echo = TRUE}
 performance_hyp_long_d = performance_hyp_long_d %>% 
   mutate(ConfrontationalGame = grepl("SOF", Measurement), # create a new variable that will say whether the measurement was of the game soldier of fortune (SOF).
          WithMusic = !grepl("NoMusic|WithoutMusic", Measurement), # creates a new column named WithMusic, which is False if the measurement contains *either* "NoMusic" or "WithoutMusic"
@@ -179,17 +181,17 @@ performance_hyp_long_d = performance_hyp_long_d %>%
 
 Now you can help! For the rating dataset, write a test on a measurement name, using `grepl` or `%in%` to figure out whether it's a recall or a music rating. Your new `IsRecall` column should be true if the measurement name contain either "Friends" or "Strangers".
 
-```{r}
-rating_hyp_long_d = rating_hyp_long_d %>%
+```{r, echo = TRUE}
+rating_hyp_long_d = rating_hyp_long_d |>
   mutate(
-    IsRecall = ,## Your code here
+    IsRecall = grepl("Friends|Strangers", Measurement)
   )
 ```
 
 Here are a couple other useful ways of manipulating columns. (You won't remember all the functions you see here now, but that's okay. You can always reference this tutorial later if there's something you need to figure out how to do.)
 
-```{r}
-rating_hyp_long_d = rating_hyp_long_d %>%
+```{r, echo = TRUE}
+rating_hyp_long_d = rating_hyp_long_d |>
   mutate(
     GameNumber = as.numeric(substr(rating_hyp_long_d$Measurement, 5, 5)),
     ConfrontationalGame = GameNumber <= 2, # in a mutate, we can use a column we created (or changed) right away. Games 1 and 2 are confrontational, games 3 and 4 are not.
